[tool.poetry]
name = "repl_pygame_beta_Proj1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
pygame-gui = "^0.5.7"
pygame-widgets = "^1.0.0"
pygame-vkeyboard = "^2.0.9"
pygame-menu = "^4.2.0"
pygame-assets = "^0.1"
pygame-plus = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
